@@ -1,0 +1,8 @@
+fileFormatVersion: 2
+guid: f750d4b2c7811014bb7600958732d9b3
+folderAsset: yes
+DefaultImporter:
+  externalObjects: {}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
