@@ -1,0 +1,7 @@
+fileFormatVersion: 2
+guid: ee68dcbc8607e0447bea305723327275
+TextScriptImporter:
+  externalObjects: {}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
