@@ -1,0 +1,11 @@
+fileFormatVersion: 2
+guid: a3c8d3d3a2d49c64597adf3f50afd657
+MonoImporter:
+  externalObjects: {}
+  serializedVersion: 2
+  defaultReferences: []
+  executionOrder: 0
+  icon: {instanceID: 0}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
